--- a/src/components/piano.styles.scss
+++ b/src/components/piano.styles.scss
@@ -2,13 +2,19 @@
 .white-canvas {
     background-color: white;
     width: 90vw;
-    height: 500px;
+    height: 70vh;
     display: flex;
-    
+    justify-content: center;
+    .key {
+        width: 100vw;
+        margin-bottom: 0;
+        padding-bottom:0;
+    }
+
     .white {
-        width: 9%;
+        width: 20%;
         min-width: 60px;
-        height: 70%;
+        height: 100%;
         background-color: white;
         border: 1px solid #ccc;
     }
@@ -16,12 +22,10 @@
     .black {
         width: 8%;
         height: 45%;
-        margin-left: -4%;
-        margin-right: -4%;
+        margin-left: -10%;
+        margin-right: -6%;
         z-index: 2;
         background-color: black;
         border: 10px solid white;
-        border-bottom: 0px;
-        border-top: 0px;
       }
 }
